--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 ﻿<!doctype html>
 <html class="no-js" lang="en">
 
-<!-- Mirrored from demo.hasthemes.com/ftage-preview/ftage/index-production.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 14 Apr 2020 07:21:13 GMT -->
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Home Production - Ftage</title>
+    <title>Home Production </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -53,21 +52,19 @@
                                         <li class="active"><a href="index.html">Home</a>
 
                                         </li>
-                                        <li><a href="about-us.html">About</a></li>
-                                        <li><a href="service.html">Services</a>
+                                        <li><a href="#">About</a></li>
+                                        <li><a href="#">Services</a>
 
                                         </li>
-                                        <li><a href="gallery.html">Gallery </a>
+                                        <li><a href="#">Gallery </a>
 
                                         </li>
-                                        <li><a href="portfolio.html"> Portfolio </a>
-
-                                        </li>
-                                        <li><a href="news.html"> News </a>
+                                        <li><a href="#"> Portfolio </a>
 
                                         </li>
 
-                                        <li><a href="contact-us.html">Contact</a></li>
+
+                                        <li><a href="#">Contact</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -81,7 +78,7 @@
                         <!-- Logo Area End -->
                         <div class="col align-self-center d-lg-block d-md-block d-sm-none d-none">
                             <div class="pro-mre-btn text-right">
-                                <a href="movie-details.html">About More</a>
+                                <a href="index.html">About More</span></a>
                             </div>
                         </div>
                     </div>
@@ -98,21 +95,19 @@
                                                 <li class="active"><a href="index.html">Home</a>
 
                                                 </li>
-                                                <li><a href="about-us.html">About</a></li>
-                                                <li><a href="service.html">Services</a>
+                                                <li><a href="#">About</a></li>
+                                                <li><a href="#">Services</a>
 
                                                 </li>
-                                                <li><a href="gallery.html">Gallery </a>
+                                                <li><a href="#">Gallery </a>
 
                                                 </li>
-                                                <li><a href="portfolio.html"> Portfolio </a>
-
-                                                </li>
-                                                <li><a href="news.html"> News </a>
+                                                <li><a href="#"> Portfolio </a>
 
                                                 </li>
 
-                                                <li><a href="contact-us.html">Contact</a></li>
+
+                                                <li><a href="#">Contact</a></li>
                                             </ul>
                                         </nav>
                                     </div>
@@ -155,7 +150,7 @@
                                 <div class="tp-caption rev-btn  rs-parallaxlevel-1" id="slide-13-layer-11" data-x="['center','center','center','center']" data-hoffset="['-1','0','2','0']" data-y="['middle','middle','middle','middle']" data-voffset="['180','300','301','283']" data-width="none"
                                     data-height="none" data-whitespace="nowrap" data-type="button" data-actions='[{"event":"click","action":"simplelink","target":"_self","url":"http:\/\/demo.wphash.com\/ftagem\/about-us\/","delay":""}]' data-responsive_offset="on"
                                     data-responsive="off" data-frames='[{"delay":130,"speed":1000,"frame":"0","from":"y:bottom;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":1000,"frame":"999","to":"opacity:0;","ease":"Power3.easeOut"},{"frame":"hover","speed":"0","ease":"Power3.easeInOut","to":"o:1;skX:-15px;skY:0px;rX:0;rY:0;rZ:0;z:0;","style":"c:rgb(255,255,255);bg:rgb(10,10,10);bs:solid;bw:0 0 0 0;transition:all 0.3s ease-in-out;"}]'
-                                    data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[12,12,12,10]" data-paddingright="[35,35,35,20]" data-paddingbottom="[12,12,12,10]" data-paddingleft="[35,35,35,20]" style="z-index: 7; white-space: nowrap; font-size: 17px; line-height: 17px; font-weight: 500; color: rgba(255,255,255,1); font-family:Roboto;background-color:rgb(226,167,80);border-color:rgba(0,0,0,1);outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;transition:all 0.3s ease-in-out;cursor:pointer;">Learn More </div>
+                                    data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[12,12,12,10]" data-paddingright="[35,35,35,20]" data-paddingbottom="[12,12,12,10]" data-paddingleft="[35,35,35,20]" style="z-index: 7; white-space: nowrap; font-size: 17px; line-height: 17px; font-weight: 500; color: rgba(255,255,255,1); font-family:Roboto;background-color: #50e2db;border-color:rgba(0,0,0,1);outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;transition:all 0.3s ease-in-out;cursor:pointer;">Learn More </div>
 
                                 <!-- LAYER NR. 4 -->
                                 <div class="tp-caption   tp-resizeme" id="slide-13-layer-12" data-x="['left','left','left','left']" data-hoffset="['5','5','5','5']" data-y="['bottom','bottom','top','bottom']" data-voffset="['80','100','778','50']" data-width="none" data-height="none"
@@ -165,11 +160,11 @@
                                 <!-- LAYER NR. 5 -->
                                 <div class="tp-caption   tp-resizeme rs-parallaxlevel-1" id="slide-13-layer-4" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['top','middle','middle','middle']" data-voffset="['302','13','13','26']" data-fontsize="['48','48','48','25']"
                                     data-lineheight="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"delay":10,"speed":1000,"frame":"0","from":"z:0;rX:0deg;rY:0;rZ:0;sX:2;sY:2;skX:0;skY:0;opacity:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","to":"o:1;","ease":"Power2.easeOut"},{"delay":"wait","speed":1000,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
-                                    data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 9; white-space: nowrap; font-size: 48px; line-height: 50px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Orbitron;">It’s our <span style="color:#e2a750">Honour</span> </div>
+                                    data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 9; white-space: nowrap; font-size: 48px; line-height: 50px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Arial, Helvetica, sans-serif Alte;">It’s our <span style="color: #50e2db">Honour</span> </div>
                                 <!-- LAYER NR. 6 -->
                                 <div class="tp-caption   tp-resizeme rs-parallaxlevel-1" id="slide-13-layer-7" data-x="['center','center','center','center']" data-hoffset="['9','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-40','79','79','69']" data-fontsize="['48','48','48','30']"
                                     data-lineheight="['50','50','50','35']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"delay":190,"speed":1000,"frame":"0","from":"z:0;rX:0deg;rY:0;rZ:0;sX:2;sY:2;skX:0;skY:0;opacity:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","to":"o:1;","ease":"Power2.easeOut"},{"delay":"wait","speed":1000,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
-                                    data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,15]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,15]" style="z-index: 10; white-space: nowrap; font-size: 48px; line-height: 50px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Orbitron;text-transform:uppercase;">To Make film <span style="color:#e2a750">Createive </span> </div>
+                                    data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,15]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,15]" style="z-index: 10; white-space: nowrap; font-size: 48px; line-height: 50px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Arial, Helvetica, sans-serif;text-transform:uppercase;">To Make film <span style="color: #50e2db">Creative </span> </div>
                             </li>
                             <!-- SLIDE  -->
                             <li data-index="rs-14" data-transition="fade,zoomin" data-slotamount="default,default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="default,default" data-easeout="default,default" data-masterspeed="1000,default" data-thumb="img/slider/home-production/100x50_filmimage06dd.jpg"
@@ -194,7 +189,7 @@
                                 <div class="tp-caption rev-btn  rs-parallaxlevel-1" id="slide-14-layer-11" data-x="['center','center','center','center']" data-hoffset="['-1','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['190','315','301','283']" data-width="none"
                                     data-height="none" data-whitespace="nowrap" data-type="button" data-actions='[{"event":"click","action":"simplelink","target":"_self","url":"http:\/\/demo.wphash.com\/ftagem\/about-us\/","delay":""}]' data-responsive_offset="on"
                                     data-responsive="off" data-frames='[{"delay":130,"speed":1000,"frame":"0","from":"y:bottom;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":1000,"frame":"999","to":"opacity:0;","ease":"Power3.easeOut"},{"frame":"hover","speed":"0","ease":"Power3.easeInOut","to":"o:1;skX:-15px;skY:0px;rX:0;rY:0;rZ:0;z:0;","style":"c:rgb(255,255,255);bg:rgb(10,10,10);bs:solid;bw:0 0 0 0;transition:all 0.3s ease-in-out;"}]'
-                                    data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[12,12,12,10]" data-paddingright="[35,35,35,20]" data-paddingbottom="[12,12,12,10]" data-paddingleft="[35,35,35,20]" style="z-index: 7; white-space: nowrap; font-size: 17px; line-height: 17px; font-weight: 500; color: rgba(255,255,255,1); font-family:Roboto;background-color:rgb(226,167,80);border-color:rgba(0,0,0,1);outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;transition:all 0.3s ease-in-out;cursor:pointer;">Learn More </div>
+                                    data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[12,12,12,10]" data-paddingright="[35,35,35,20]" data-paddingbottom="[12,12,12,10]" data-paddingleft="[35,35,35,20]" style="z-index: 7; white-space: nowrap; font-size: 17px; line-height: 17px; font-weight: 500; color: rgba(255,255,255,1); font-family:Roboto;background-color:#50e2db;border-color:rgba(0,0,0,1);outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;transition:all 0.3s ease-in-out;cursor:pointer;">Learn More </div>
                                 <!-- LAYER NR. 10 -->
                                 <div class="tp-caption   tp-resizeme" id="slide-14-layer-12" data-x="['left','left','left','left']" data-hoffset="['5','5','5','5']" data-y="['bottom','bottom','top','bottom']" data-voffset="['80','100','778','30']" data-width="none" data-height="none"
                                     data-whitespace="nowrap" data-visibility="['on','on','off','off']" data-type="text" data-responsive_offset="on" data-frames='[{"delay":10,"speed":1500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
@@ -203,13 +198,13 @@
                                 <!-- LAYER NR. 11 -->
                                 <div class="tp-caption tp-resizeme rs-parallaxlevel-1" id="slide-14-layer-4" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['top','middle','middle','middle']" data-voffset="['302','13','13','26']" data-fontsize="['48','48','48','25']"
                                     data-lineheight="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"delay":10,"speed":1000,"frame":"0","from":"z:0;rX:0deg;rY:0;rZ:0;sX:2;sY:2;skX:0;skY:0;opacity:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","to":"o:1;","ease":"Power2.easeOut"},{"delay":"wait","speed":1000,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
-                                    data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 9; white-space: nowrap; font-size: 48px; line-height: 50px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Orbitron;">To Create <span style="color:#e2a750">Film</span>
+                                    data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 9; white-space: nowrap; font-size: 48px; line-height: 50px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Orbitron;">To Create <span style="color: #50e2db">Film</span>
                                 </div>
 
                                 <!-- LAYER NR. 12 -->
                                 <div class="tp-caption tp-resizeme rs-parallaxlevel-1" id="slide-14-layer-7" data-x="['center','center','center','center']" data-hoffset="['9','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-40','79','79','69']" data-fontsize="['48','48','48','30']"
                                     data-lineheight="['50','50','50','35']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"delay":190,"speed":1000,"frame":"0","from":"z:0;rX:0deg;rY:0;rZ:0;sX:2;sY:2;skX:0;skY:0;opacity:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","to":"o:1;","ease":"Power2.easeOut"},{"delay":"wait","speed":1000,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
-                                    data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,15]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,15]" style="z-index: 10; white-space: nowrap; font-size: 48px; line-height: 50px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Orbitron;text-transform:uppercase;">It's our <span style="color:#e2a750">Passion </span> </div>
+                                    data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,15]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,15]" style="z-index: 10; white-space: nowrap; font-size: 48px; line-height: 50px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Montserrat Alte;text-transform:uppercase;">It's our <span style="color: #50e2db">Passion </span> </div>
                             </li>
                         </ul>
                         <div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
@@ -668,13 +663,13 @@
                                 <div class="contact-info">
                                     <ul>
                                         <li>
-                                            <p>Address: House. 4, Rosd. 7, East city. Orled. Sydney. Australya.</p>
+                                            <p>Address: House. 4, Rosd. x, East city. Orled.</p>
                                         </li>
                                         <li>
-                                            <p>Phone: +8801912345678 +8801912345678</p>
+                                            <p>Phone: +8801912345XXX +8801912345XXX</p>
                                         </li>
                                         <li>
-                                            <p>E-mail: www.filmcity@gmail.com filmcitycompany@gmail.com</p>
+                                            <p>E-mail: www.dummy@gmail.com</p>
                                         </li>
                                     </ul>
                                 </div>
@@ -691,7 +686,7 @@
                     <div class="col-md-12">
                         <div class="footer-bottom">
                             <div class="footer-left">
-                                <p>Copyright © <a href="#">Ftage</a>. All Right Reserved.</p>
+                                <p>Copyright © <a href="#">Ankit Rai</a>. All Right Reserved.</p>
                             </div>
                             <div class="footer-right-social f-right">
                                 <ul>
