--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                                 <!-- LAYER NR. 11 -->
                                 <div class="tp-caption tp-resizeme rs-parallaxlevel-1" id="slide-14-layer-4" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['top','middle','middle','middle']" data-voffset="['302','13','13','26']" data-fontsize="['48','48','48','25']"
                                     data-lineheight="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"delay":10,"speed":1000,"frame":"0","from":"z:0;rX:0deg;rY:0;rZ:0;sX:2;sY:2;skX:0;skY:0;opacity:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","to":"o:1;","ease":"Power2.easeOut"},{"delay":"wait","speed":1000,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
-                                    data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 9; white-space: nowrap; font-size: 48px; line-height: 50px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Orbitron;">To Create <span style="color: #50e2db">Film</span>
+                                    data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 9; white-space: nowrap; font-size: 48px; line-height: 50px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Montserrat Alte;">To Create <span style="color: #50e2db">Film</span>
                                 </div>
 
                                 <!-- LAYER NR. 12 -->
