--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="img/home-one/apple-touch-icon.png">
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="#">
     <!-- Place favicon.ico in the root directory -->
 
 
@@ -506,7 +506,7 @@
                         <div class="col-lg-6 col-md-10 col-md-auto">
                             <div class="footer-newsletter">
                                 <div id="mc_embed_signup" class="subscribe-form">
-                                    <form action="http://devitems.us11.list-manage.com/subscribe/post?u=6bbb9b6f5827bd842d9640c82&amp;id=05d85f18ef" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                                    <form action="#" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                         <div id="mc_embed_signup_scroll" class="mc-form">
                                             <input type="email" value="" name="EMAIL" class="email" placeholder="Your Email Address*" required>
                                             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
